crates/flight-core/tests/snapshots/core_snapshots__axis_calibration_single.snap
---
source: crates/flight-core/tests/core_snapshots.rs
expression: cal
---
{
  "axis_id": 0,
  "raw_min": 0,
  "raw_max": 65535,
  "raw_center": 32768,
  "updated_at": "2024-01-01T00:00:00Z"
}
