crates/flight-core/tests/snapshots/core_snapshots__calibration_store_empty.snap
---
source: crates/flight-core/tests/core_snapshots.rs
expression: store
---
{
  "calibrations": {}
}
