crates/flight-core/tests/snapshots/core_snapshots__error_catalog_code_index.snap
---
source: crates/flight-core/tests/core_snapshots.rs
expression: codes
---
[
    "CFG-001",
    "CFG-002",
    "CFG-003",
    "CFG-004",
    "DEV-001",
    "DEV-002",
    "DEV-003",
    "DEV-004",
    "DEV-005",
    "INT-001",
    "INT-002",
    "INT-003",
    "INT-004",
    "NET-001",
    "NET-002",
    "NET-003",
    "NET-004",
    "PLG-001",
    "PLG-002",
    "PLG-003",
    "PLG-004",
    "PRF-001",
    "PRF-002",
    "PRF-003",
    "PRF-004",
    "SIM-001",
    "SIM-002",
    "SIM-003",
    "SIM-004",
    "SVC-001",
    "SVC-002",
    "SVC-003",
    "SVC-004",
]
