crates/flight-core/tests/snapshots/core_snapshots__error_catalog_config_category.snap
---
source: crates/flight-core/tests/core_snapshots.rs
expression: output
---
[
    "CFG-001: Config file missing",
    "CFG-002: Config parse error",
    "CFG-003: Config value out of range",
    "CFG-004: Config migration required",
]
