crates/flight-core/tests/snapshots/core_snapshots__error_catalog_service_category.snap
---
source: crates/flight-core/tests/core_snapshots.rs
expression: output
---
[
    "SVC-001: Service start failed",
    "SVC-002: Instance lock held",
    "SVC-003: Graceful shutdown timeout",
    "SVC-004: Health check failed",
]
